# Telegram-bot-template

./: .dockerignore  .gitignore  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20250925_0105_init_migrationtimezone = utc.py
app/: const_texts.py  constants.py  exceptions.py  filters.py  helpers.py  keyboards.py  metrics.py  scheduler.py  texts.json
app/cache/: code_entry_cache.py  user_cache.py
app/database/: session.py  uow.py
app/database/models/: __init__.py  admin_invite.py  base.py  const_message.py  enums.py  file.py  temp_message.py  user.py  user_states.py
app/database/repositories/: base.py  const_repo.py  file_repo.py  invite_repo.py  temp_repo.py  user_repo.py
app/handlers/: __init__.py  admin_router.py  callback_router.py  const_router.py  file_router.py  public_commands.py  temp_router.py
app/middlewares/: __init__.py  metrics_collector.py  scheduler_injector.py  user_data_middleware.py
app/services/: invite_manager.py  text_manager.py  user_manager.py
